# risk-api

./: .dockerignore  .env.example  .env.production  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOVER.md  README.md  avatar.html  docker-compose.yml  fly.toml  pyproject.toml
.claude/: napkin.md
.codex/: napkin.md
.githooks/: pre-commit  pre-push
auto/: README.md  bench.py  loop.py  program.md
docs/: A003_DESIGN_SPEC.md  BizPlanning.md  CDP_BAZAAR_ESCALATION_2026-07-06.md  DECISIONS.md  DURABLE_ANALYTICS_CUTOVER.md  GrowthExecutionPlan.md  HONEYPOT_EXECUTION_PHASE2.md  MCP_PACKAGING_PLAN.md  PRODUCT_DIRECTION_UPDATE.md  PRODUCT_WEDGE_MEMO.md  PYTHON_PAYMENT_QUICKSTART.md  REGISTRATIONS.md  SELLING_TO_AGENTS_MEMO.md  X402_ECOSYSTEM_SUBMISSION.md  agent-economy-primer.md  autonomous-agent-operations-field-guide.md  llm_discoverability_runs_filled.csv  llm_discoverability_summary_filled.csv  llm_discoverability_synthesis.md  outreach.md  x402-landscape-research.md
scripts/: backfill_analytics_db.py  check_cdp_discovery.py  deploy.sh  fetch_test_bytecodes.py  health_check.py  pin_metadata_ipfs.py  register_erc8004.py  register_moltmart.py  register_work402.py  register_x402jobs.py  test_x402_client.py  test_x402_payment.py
tests/: conftest.py  test_action_policy.py  test_api_contract.py  test_app.py  test_auto_bench.py  test_auto_loop.py  test_cdp_auth.py  test_config.py  test_disassembler.py  test_engine.py  test_logging.py  test_opcodes.py  test_paid_contract_regressions.py  test_patterns.py  test_pin_metadata.py  test_policy.py  test_pre_a003_coverage.py  (+6 more)
(+36 files in other folders)
