[project]
name = "risk-api"
version = "0.1.0"
description = "Smart contract risk scoring API with x402 payments"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0,<4",
    "x402[flask,evm]>=2.2.0,<3",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real external services",
]
